Menú de opciones y archivos secundarios

--- a/index.html
+++ b/index.html
@@ -3,11 +3,69 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>WikiFilms</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum maxime expedita sunt porro tempora veniam illum, nulla dolore repellendus quas exercitationem quibusdam quidem! Dolore natus odio dicta! Vitae quae vel qui natus cupiditate non minima. Placeat veritatis hic, dolorum nostrum sed sapiente nam enim quae explicabo eaque maiores, suscipit corporis sunt architecto pariatur, ut autem possimus adipisci consequuntur ipsam. Commodi quam adipisci ipsam veniam temporibus suscipit officiis voluptates. Quis mollitia libero nihil sed, explicabo reprehenderit! Alias, asperiores nesciunt. Dignissimos, aut? Quasi voluptatum nihil error libero! Enim, numquam consequatur. Eius, sequi? Voluptatibus nisi magnam quod assumenda veniam commodi nam, ab sit iste itaque officiis, odit quibusdam non unde illum alias ut, aspernatur obcaecati a. Molestiae architecto recusandae adipisci ad fuga excepturi harum, facilis nemo est, ratione, porro amet ut ducimus deleniti sint repellendus totam dolore numquam neque? Natus voluptate sapiente accusantium, ducimus ipsa molestias, dolor velit dicta omnis consectetur adipisci laboriosam aliquam expedita impedit, commodi dolorum! Id esse accusamus nostrum dicta. Sapiente quidem aspernatur blanditiis sequi et, id voluptas ad dolores, quos consequuntur ipsum quia saepe nam culpa cum praesentium, dolorum possimus ipsa quaerat ullam adipisci harum! Sunt maiores accusamus error amet cumque architecto consequatur eligendi at impedit! Harum voluptatum accusantium quas alias, itaque ipsa, nostrum non doloremque distinctio fugit, perferendis repellendus nihil velit ullam. Tempora, saepe ratione dignissimos impedit nesciunt officiis dolor ipsum eligendi nobis repellendus vitae enim ullam nemo, neque suscipit qui voluptates repellat velit repudiandae quibusdam veritatis illum. Provident culpa sed sit natus tenetur explicabo! Mollitia, necessitatibus nesciunt.
-        </p>
+        <header >
+            <img class="tt" src="./cartelera.png" alt="">
+        </header>
+        <h2>La idea de este proyecto es crear una base de consulta, calificación y opinión respecto de la filmográfia mundial, donde los usuarios tendrán la posibilidad de hacer búsquedas por título, género, director, año de estreno, país de origen o aquellas protagonizadas por un determinado actor / actriz.
+        Ubicado el título se mostrará toda la información relacionada al mismo, incluyendo una reseña y la calificación dada por los usuarios.
+        </h2>
+        <div>
+            <ul>
+                <h2>
+                    <li><a href="./peliculas.html">Título</a></li>
+                    <br>
+                    <li><a href="./directores.html">Director</a></li>
+                    <br>
+                    <li><a href="./generos.html">Género</a></li>
+                    <br>
+                    <li><a href="./anios.html">Año estreno</a></li>
+                    <br>
+                    <li><a href="./paises.html">País de origen</a></li>
+                    <br>
+                    <li><a href="./actores.html">Actor/Actriz</a></li>
+                </h2>
+            </ul>
+        </div>
+        
     </body>
+    <footer>Desarrollada por Andrés Lattanzio. Derechos Reservados. 2024</footer>
     </html>
+
+
+<!-- LISTA DESPLEGABLE + CUADRO DE TEXTO + BOTON BUSCAR
+    <label for="CampoBusqueda">Parámetros de búsqueda:</label>
+    <select id="CampoBusqueda">
+        <option>Título</option>
+        <option>Género</option>
+        <option>Director</option>
+        <option>Año de estreno</option>
+        <option>País</option>
+        <option>Actor protagonista</option>
+    </select>
+    <input type="text">
+    <input type="button" value="Buscar">
+-->
+
+<!-- LISTA ORDENADA (Ordened List)
+    <ol>
+        <li>Título</li>
+        <li>Director</li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
+-->
+
+<!-- LISTA NO ORDENADA (Unordened List)
+    <ul>
+        <li>Título</li>
+        <li>Director</li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+-->
