De todo un poco

--- a/actores.html
+++ b/actores.html
@@ -1,1 +1,56 @@
-actores
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WF Actores</title>
+</head>
+
+<body>
+    <header >
+        <a id="Indice"></a>
+        <img src="./cartelera.png" alt="" width="1000">
+    </header>
+
+    <nav>
+        <ul>
+            <h4>
+                <li><a href="./peliculas.html">Películas</a></li>
+                <li><a href="./directores.html">Directores</a></li>
+                <li><a href="./generos.html">Géneros</a></li>
+                <li><a href="./anios.html">Años de estreno</a></li>
+                <li><a href="./paises.html">Países de origen</a></li>
+                <li><a href="./index.html">Página principal</a></li>
+            </h4>
+        </ul>
+    </nav>
+    <br>
+    
+    <main>
+        <section>
+            <h1>Búsqueda de películas por Actor / Actriz</h1>
+
+            <form action="./actores.html" method="get">
+                <input type="text" name="nombreActor" id="actor" placeholder="Nombre del actor">
+                <input type="submit" value="Buscar">
+            </form>
+            <br>
+        </section>
+
+        <section>
+            <table border="1">
+                <tr>
+                    <td><img src="./Bale.jpg" alt="Christian Bale"></td>
+                    <td><h2>Biografía</h2></td>
+                    <td><h2>Filmografía</h2></td>
+                </tr>
+            </table>
+            <br>
+        </section>
+    </main>
+</body>
+
+<footer>Desarrollada por Andrés Lattanzio. Derechos Reservados. 2024</footer>
+
+</html>
