--- a/anios.html
+++ b/anios.html
@@ -1,1 +1,45 @@
-años
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WF Años</title>
+</head>
+
+<body>
+    <header >
+        <a id="Indice"></a>
+        <img src="./cartelera.png" alt="" width="1000">
+    </header>
+
+    <nav>
+        <ul>
+            <h4>
+                <li><a href="./peliculas.html">Películas</a></li>
+                <li><a href="./directores.html">Directores</a></li>
+                <li><a href="./generos.html">Géneros</a></li>
+                <li><a href="./paises.html">Países de origen</a></li>
+                <li><a href="./actores.html">Actores/Actrices</a></li>
+                <li><a href="./index.html">Página principal</a></li>
+            </h4>
+        </ul>
+    </nav>
+    <br>
+    
+    <main>
+        <section>
+            <h1>Búsqueda de películas por año de estreno</h1>
+
+            <form action="./anios.html" method="get">
+                <input type="number" min="1950" max="2024">
+                <input type="submit" value="Filtrar">
+            </form>
+            <br>
+        </section>
+    </main>
+</body>
+
+<footer>Desarrollada por Andrés Lattanzio. Derechos Reservados. 2024</footer>
+
+</html>
