--- a/generos.html
+++ b/generos.html
@@ -1,1 +1,67 @@
-generos
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WF Generos</title>
+</head>
+
+<body>
+    <header >
+        <a id="Indice"></a>
+        <img src="./cartelera.png" alt="" width="1000">
+        
+    </header>
+
+    <nav>
+        <ul>
+            <h4>
+                <li><a href="./peliculas.html">Películas</a></li>
+                <li><a href="./directores.html">Directores</a></li>
+                <li><a href="./anios.html">Años de estreno</a></li>
+                <li><a href="./paises.html">Países de origen</a></li>
+                <li><a href="./actores.html">Actores/Actrices</a></li>
+                <li><a href="./index.html">Página principal</a></li>
+            </h4>
+        </ul>
+    </nav>
+    <br>
+    <br>
+
+    <main>
+        <section>
+            <h1>Búsqueda de películas por Género</h1>
+
+            <form action="./generos.html" method="get">
+                <select name="genero" id="nombreGenero">
+                    <option value="value1">Acción</option>
+                    <option value="value2">Aventura</option>
+                    <option value="value3">Comedia</option>
+                    <option value="value4">Drama</option>
+                    <option value="value5">Ciencia Ficción</option>
+                    <option value="value6">Fantasía</option>
+                    <option value="value7">Terror</option>
+                    <option value="value8">Misterio</option>
+                    <option value="value9">Suspenso</option>
+                    <option value="value10">Romance</option>
+                    <option value="value11">Animación</option>
+                    <option value="value12">Documental</option>
+                    <option value="value13">Crimen</option>
+                    <option value="value14">Western</option>
+                    <option value="value15">Musical</option>
+                    <option value="value16">Guerra</option>
+                    <option value="value17">Biográfico</option>
+                    <option value="value18">Histórico</option>
+                    <option value="value19">Deportes</option>
+                </select>
+                <input type="submit" value="Filtrar">
+            </form>
+            <br>
+        </section>
+    </main>
+</body>
+
+<footer>Desarrollada por Andrés Lattanzio. Derechos Reservados. 2024</footer>
+
+</html>
