--- a/anios.html
+++ b/anios.html
@@ -40,6 +40,6 @@
     </main>
 </body>
 
-<footer>Desarrollada por Andrés Lattanzio. Derechos Reservados. 2024</footer>
+<footer>Desarrollada por Andrés Lattanzio. &copy; Derechos Reservados. 2024</footer>
 
 </html>
