Cambio de cabecera, cards, etc

--- a/index.html
+++ b/index.html
@@ -5,43 +5,204 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WikiFilms</title>
+    <link rel="stylesheet" href="./estilos/index.css">
 </head>
 
 <body>
     <header >
-        <img src="./cartelera.png" alt="Cartelera" width="1000">
+        <nav>
+            <div class="cabecera">
+
+                <div class="cartel">
+                    <img src="./imagenes/cartelera.png" alt="Cartelera">
+                </div>
+
+                <div class="menu">
+                    <ul>
+                        <li><a class="peli" href="./peliculas.html">Películas</a></li>
+                        <li><a class="dire" href="./directores.html">Directores</a></li>
+                        <li><a class="gene" href="./generos.html">Géneros</a></li>     
+                        <li><a class="anio" href="./anios.html">Años de estreno</a></li>                
+                        <li><a class="pais" href="./paises.html">Países de origen</a></li>                
+                        <li><a class="acto" href="./actores.html">Actores/Actrices</a></li>                
+                        <li><a class="cont" href="./contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </nav>
     </header>
 
-    <nav>
-        <ul>
-            <h4>
-                <li><a href="./peliculas.html">Películas</a></li>
-                <li><a href="./directores.html">Directores</a></li>
-                <li><a href="./generos.html">Géneros</a></li>
-                <li><a href="./anios.html">Años de estreno</a></li>
-                <li><a href="./paises.html">Países de origen</a></li>
-                <li><a href="./actores.html">Actores/Actrices</a></li>
-            </h4>
-        </ul>
-    </nav>
-    <br>
-
     <main>
-        <h2>La idea de este proyecto es crear una base de consulta, calificación y opinión respecto de la filmográfia mundial, donde los usuarios tendrán la posibilidad de hacer búsquedas por título, género, director, año de estreno, país de origen o aquellas protagonizadas por un determinado actor / actriz.
-        Ubicado el título se mostrará toda la información relacionada al mismo, incluyendo una reseña y la calificación dada por los usuarios.
-        </h2>
-        <br>
+        <div class="contenedor">
 
-        <form action="./index.html" method="get">
-            <h3><p>Para suscribirse complete los datos a continuación y si lo desea envíenos sugerencias para el sitio</p></h3>
-            <input type="text" name="nombre" placeholder="Nombre"> <br><br>
-            <input type="text" name="apellido" placeholder="Apellido"> <br><br>
-            <input type="email" name="correo" placeholder="Mail"> <br><br>
-            <textarea name="sugerencias" id="sugerencias" cols="30" rows="10" placeholder="Sugerencias"></textarea>
-            <input type="submit" name="suscribir" value="Suscribir">
-        </form>
+            <div class="div1">
+                La idea de este proyecto es crear una base de consulta, calificación y opinión respecto de la filmográfia mundial, donde los usuarios tendrán la posibilidad de hacer búsquedas por título, género, director, año de estreno, país de origen o aquellas protagonizadas por un determinado actor / actriz.
+                Ubicado el título se mostrará toda la información relacionada al mismo, incluyendo una reseña y la calificación dada por los usuarios.
+            </div>
 
+            <div class="div2">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus, aliquid, blanditiis dicta neque amet quod repudiandae excepturi iusto laboriosam corrupti, reprehenderit ipsa deleniti asperiores? Quidem nemo tempora nobis soluta distinctio!
+            </div>
+
+            <div class="div3">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus, aliquid, blanditiis dicta neque amet quod repudiandae excepturi iusto laboriosam corrupti, reprehenderit ipsa deleniti asperiores? Quidem nemo tempora nobis soluta distinctio!
+            </div>
+            
+            <div class="div4">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus, aliquid, blanditiis dicta neque amet quod repudiandae excepturi iusto laboriosam corrupti, reprehenderit ipsa deleniti asperiores? Quidem nemo tempora nobis soluta distinctio!
+            </div>
+
+        </div>
+        
     </main>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <br>
 </body>
 
@@ -64,22 +225,3 @@
     <input type="button" value="Buscar">
 -->
 
-<!-- LISTA ORDENADA (Ordered List)
-    <ol>
-        <li>Título</li>
-        <li>Director</li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ol>
--->
-
-<!-- LISTA NO ORDENADA (Unordered List)
-    <ul>
-        <li>Título</li>
-        <li>Director</li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
--->
