--- a/actores.html
+++ b/actores.html
@@ -4,132 +4,157 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WF Actores</title>
+    <title>WikiFilms -> Actores</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./estilos/index.css">
     <link rel="stylesheet" href="./estilos/actores.css">
+    <!--<script src="./funciones.js"></script> -->
+
 </head>
 
 <body>
-
-    <header class="cabecera">
-
-        <p>WikiFilms, la web de los cinéfilos</p>
-
-        <nav>                    
-            <ul class="MenuOpciones">
-                <li><a href="./anios.html">Años de estreno</a></li>                
-                <li><a href="./directores.html">Directores</a></li>                
-                <li><a href="./generos.html">Géneros</a></li>     
-                <li><a href="./paises.html">Países de origen</a></li>                
-                <li><a href="./peliculas.html">Películas</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-                <li><a href="./index.html">Página principal</a></li>
-            </ul>
+    <header id="indice">
+        <nav class="navbar navbar-expand-lg bg-danger">
+            <div class="container-fluid">
+            <a class="navbar-brand titulo" href="./index.html">WikiFilms</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./actores.html">Actores</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./directores.html">Directores</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./anios.html">Estreno</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./generos.html">Géneros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./paises.html">Países</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./peliculas.html">Películas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./contacto.html">Suscribirse</a>
+                </li>
+                </ul>
+            </div>
+            </div>
         </nav>
-
     </header>
 
     <main>
+        <div class="encabezado">
+            <p>Búsqueda de películas por nombre de actor</p>
+        </div>
         
-        <section class="Ingreso">
-            <h1>Búsqueda de películas por Actor</h1>
-
+        <div class="ingreso">
             <form action="./actores.html" method="get">
                 <input type="text" name="nombreActor" id="actor" placeholder="Nombre del actor">
-                <input type="submit" value="Buscar" id="BotonBuscar">
+                <input type="submit" value="Buscar" id="botonBuscar">
             </form>
-        </section>
+        </div>
 
-        <section class="Respuesta">
-            <div class="Foto">
+        <div class="respuesta">
+
+            <div class="foto">
                 <img src="./imagenes/Bale.jpg" alt="Christian Bale">
             </div>
 
-            <div class="Bio">
+            <div class="bio">
                 <h2>Biografía</h2>
-                <br>
-                <p>
-                    Christian Charles Philip Bale es un actor británicoestadounidense nacido en Gales ganador de dos Globos de Oro, dos premios del SAG y un Óscar.Nacimiento: 30 de enero de 1974 (edad 50 años), Haverfordwest, Reino Unido. <br><br>
-                    <u>Nominaciones:</u> Premio Óscar al Mejor Actor. <br><br>
-                    <u>Hijas:</u> Luka Bale <br><br>
-                    <u>Cónyuge:</u> Sibi Blazic (m. 2000) <br><br>
-                    <u>Estatura:</u> 1.83 m <br><br>
-                    <u>Padres:</u> David Bale, Jenny James 
-                </p>
+                <div>
+                    Christian Charles Philip Bale es un actor británicoestadounidense nacido en Gales ganador de dos Globos de Oro, dos premios del SAG y un Óscar. <br>
+                    Nacimiento: 30 de enero de 1974 (edad 50 años), Haverfordwest, Reino Unido. <br>
+                    <u>Nominaciones:</u> Premio Óscar al Mejor Actor. <br>
+                    <u>Hijas:</u> Luka Bale <br>
+                    <u>Cónyuge:</u> Sibi Blazic (m. 2000) <br>
+                    <u>Estatura:</u> 1.83 m <br>
+                    <u>Padres:</u> David Bale, Jenny James <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt repellat, explicabo ipsam possimus soluta cum error eligendi tenetur? Saepe quidem repellendus ipsam praesentium et atque deleniti ex! Obcaecati, explicabo officiis!  <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt repellat, explicabo ipsam possimus soluta cum error eligendi tenetur? Saepe quidem repellendus ipsam praesentium et atque deleniti ex! Obcaecati, explicabo officiis!
+                </div>
             </div>
 
-            <div class="Film">
+            <div class="film">
                 <h2>Filmografía</h2>
-                <br>
-                <ul>
-                    <a href="#">1987: Mio en la tierra del más allá</a><br>
-                    <a href="#">1987: El imperio del sol</a><br>
-                    <a href="#">1989: Enrique V</a><br>
-                    <a href="#">1992: La pandilla</a><br>
-                    <a href="#">1993: Rebeldes del swing</a><br>
-                    <a href="#">1994: La leyenda del príncipe	Amled</a><br>
-                    <a href="#">1995: Pocahontas</a><br>
-                    <a href="#">1996: Retrato de una dama</a><br>
-                    <a href="#">1996: El agente secreto</a><br>
-                    <a href="#">1997: Metroland</a><br>
-                    <a href="#">1998: Velvet Goldmine</a><br>
-                    <a href="#">1998: Todos los animales pequeños</a><br>
-                    <a href="#">1999: Sueño de una noche de verano</a><br>
-                    <a href="#">2000: American Psycho</a><br>
-                    <a href="#">2000: Shaft</a><br>
-                    <a href="#">2001: La mandolina del capitán Corelli</a><br>
-                    <a href="#">2002: Laurel Canyon</a><br>
-                    <a href="#">2002: Reign of Fire</a><br>
-                    <a href="#">2002: Equilibrium</a><br>
-                    <a href="#">2004: El maquinista</a><br>
-                    <a href="#">2004: Howl no Ugoku Shiro</a><br>
-                    <a href="#">2005: Batman Begins</a><br>
-                    <a href="#">2005: Tiempo para morir</a><br>
-                    <a href="#">2005: El nuevo mundo</a><br>
-                    <a href="#">2006: Rescate al amanecer</a><br>
-                    <a href="#">2006: The Prestige</a><br>
-                    <a href="#">2007: El tren de las 3:10</a><br>
-                    <a href="#">2007: I'm Not There</a><br>
-                    <a href="#">2008: The Dark Knight</a><br>
-                    <a href="#">2009: Terminator Salvation</a><br>
-                    <a href="#">2009: Enemigos públicos</a><br>
-                    <a href="#">2010: The Fighter</a><br>
-                    <a href="#">2011: Las flores de la guerra</a><br>
-                    <a href="#">2012: The Dark Knight Rises</a><br>
-                    <a href="#">2013: La ley del más fuerte</a><br>
-                    <a href="#">2013: American Hustle</a><br>
-                    <a href="#">2014: Exodus: Dioses y reyes</a><br>
-                    <a href="#">2015: Knight of Cups</a><br>
-                    <a href="#">2015: La gran apuesta</a><br>
-                    <a href="#">2016: La promesa</a><br>
-                    <a href="#">2017: Hostiles</a><br>
-                    <a href="#">2018: Mowgli: La leyenda de la selva</a><br>
-                    <a href="#">2018: El vicio del poder</a><br>
-                    <a href="#">2019: Ford v Ferrari</a><br>
-                    <a href="#">2022: Thor: Amor y Trueno</a><br>
-                    <a href="#">2022: Amsterdam</a><br>
-                    <a href="#">2022: Los crímenes de la academia</a><br>
-                    <a href="#">2023: El chico y la garza</a><br>
-                </ul>
+                <div>
+                    <ul>
+                        <a href="#">1987: Mio en la tierra del más allá</a><br>
+                        <a href="#">1987: El imperio del sol</a><br>
+                        <a href="#">1989: Enrique V</a><br>
+                        <a href="#">1992: La pandilla</a><br>
+                        <a href="#">1993: Rebeldes del swing</a><br>
+                        <a href="#">1994: La leyenda del príncipe	Amled</a><br>
+                        <a href="#">1995: Pocahontas</a><br>
+                        <a href="#">1996: Retrato de una dama</a><br>
+                        <a href="#">1996: El agente secreto</a><br>
+                        <a href="#">1997: Metroland</a><br>
+                        <a href="#">1998: Velvet Goldmine</a><br>
+                        <a href="#">1998: Todos los animales pequeños</a><br>
+                        <a href="#">1999: Sueño de una noche de verano</a><br>
+                        <a href="#">2000: American Psycho</a><br>
+                        <a href="#">2000: Shaft</a><br>
+                        <a href="#">2001: La mandolina del capitán Corelli</a><br>
+                        <a href="#">2002: Laurel Canyon</a><br>
+                        <a href="#">2002: Reign of Fire</a><br>
+                        <a href="#">2002: Equilibrium</a><br>
+                        <a href="#">2004: El maquinista</a><br>
+                        <a href="#">2004: Howl no Ugoku Shiro</a><br>
+                        <a href="#">2005: Batman Begins</a><br>
+                        <a href="#">2005: Tiempo para morir</a><br>
+                        <a href="#">2005: El nuevo mundo</a><br>
+                        <a href="#">2006: Rescate al amanecer</a><br>
+                        <a href="#">2006: The Prestige</a><br>
+                        <a href="#">2007: El tren de las 3:10</a><br>
+                        <a href="#">2007: I'm Not There</a><br>
+                        <a href="#">2008: The Dark Knight</a><br>
+                        <a href="#">2009: Terminator Salvation</a><br>
+                        <a href="#">2009: Enemigos públicos</a><br>
+                        <a href="#">2010: The Fighter</a><br>
+                        <a href="#">2011: Las flores de la guerra</a><br>
+                        <a href="#">2012: The Dark Knight Rises</a><br>
+                        <a href="#">2013: La ley del más fuerte</a><br>
+                        <a href="#">2013: American Hustle</a><br>
+                        <a href="#">2014: Exodus: Dioses y reyes</a><br>
+                        <a href="#">2015: Knight of Cups</a><br>
+                        <a href="#">2015: La gran apuesta</a><br>
+                        <a href="#">2016: La promesa</a><br>
+                        <a href="#">2017: Hostiles</a><br>
+                        <a href="#">2018: Mowgli: La leyenda de la selva</a><br>
+                        <a href="#">2018: El vicio del poder</a><br>
+                        <a href="#">2019: Ford v Ferrari</a><br>
+                        <a href="#">2022: Thor: Amor y Trueno</a><br>
+                        <a href="#">2022: Amsterdam</a><br>
+                        <a href="#">2022: Los crímenes de la academia</a><br>
+                        <a href="#">2023: El chico y la garza</a><br>
+                    </ul>
+                </div>
             </div>
-        </section>
+        </div>
     </main>
 
     <footer>
         <div>
-            <p>Desarrollada por Andrés Lattanzio. &copy; Derechos Reservados. 2024</p>
+            Desarrollada por Andrés Lattanzio. &copy; Derechos Reservados. 2024
         </div>
         <div>
             <a href="mailto:nalattanzio@gmail.com">
                 <img src="./imagenes/gmail-icon-free-png.webp" alt="Gmail"></a>
                 
-                <a href="https://www.facebook.com/nalattanzio"><img src="./imagenes/Facebook_Logo.png" alt="TikTok"></a>
-
-                <a href="https://www.instagram.com/lattanzioandres/"><img src="./imagenes/instagram-logo.jpg" alt="Gmail"></a>
-
-            <a href="http://tiktok.com/@nalattanzio72"><img src="./imagenes/logo-tiktok.jpg" alt="TikTok"></a>
-
-
+            <a target="_blank" href="https://www.facebook.com/nalattanzio"><img src="./imagenes/Facebook_Logo.png" alt="TikTok"></a>
+  
+            <a target="_blank" href="https://www.instagram.com/lattanzioandres/"><img src="./imagenes/instagram-logo.jpg" alt="Gmail"></a>
+  
+            <a target="_blank" href="http://tiktok.com/@nalattanzio72"><img src="./imagenes/logo-tiktok.jpg" alt="TikTok"></a>
         </div>
-    </footer>
-</body>
+      </footer>
+  </body>
 </html>
