--- a/generos.html
+++ b/generos.html
@@ -4,33 +4,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WF Generos</title>
+    <title>WifiFilms -> Generos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./estilos/index.css">
     <link rel="stylesheet" href="./estilos/generos.css">
+    <!--<script src="./funciones.js"></script> -->
 </head>
 
 <body>
 
-    <header class="cabecera">
-
-        <p>WikiFilms, la web de los cinéfilos</p>
-
-        <nav>                    
-            <ul class="MenuOpciones">
-                <li><a href="./actores.html">Actores/Actrices</a></li>     
-                <li><a href="./anios.html">Años de estreno</a></li>                
-                <li><a href="./directores.html">Directores</a></li>                
-                <li><a href="./paises.html">Países de origen</a></li>                
-                <li><a href="./peliculas.html">Películas</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-                <li><a href="./index.html">Página principal</a></li>
-            </ul>
+    <header id="indice">
+        <nav class="navbar navbar-expand-lg bg-danger">
+          <div class="container-fluid">
+            <a class="navbar-brand titulo" href="./index.html">WikiFilms</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./actores.html">Actores</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./directores.html">Directores</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./anios.html">Estreno</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./generos.html">Géneros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./paises.html">Países</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./peliculas.html">Películas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./contacto.html">Suscribirse</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </nav>
-
-    </header>
-
+      </header>
+  
     <main>
-        <section class="Ingreso">
-            <h1>Búsqueda de películas por Género</h1>
+        <div class="encabezado">
+          <p>Búsqueda de películas por género</p>
+        </div>
+
+        <div class="Ingreso">
 
             <form action="./generos.html" method="get">
                 <select name="genero" id="nombreGenero">
@@ -56,33 +81,29 @@
                 </select>
                 <input type="submit" value="Filtrar" id="BotonFiltrar">
             </form>
-        </section>
+        </div>
 
-        <section class="Respuesta">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa facere praesentium nesciunt consequatur, eaque, vel labore doloremque dolorem tenetur suscipit non, ea deleniti ut veritatis minus deserunt culpa cum amet nobis ex. Quasi in voluptatem molestiae, soluta quibusdam ipsa! Voluptatibus omnis suscipit porro perferendis in laboriosam veniam mollitia at? Consectetur ab dignissimos quos temporibus assumenda dicta tenetur beatae atque quis, veniam sunt reprehenderit voluptatum blanditiis debitis sed enim? Ducimus laudantium esse atque possimus! Labore fuga molestias fugit odit sed illum aperiam accusamus minima corporis repudiandae porro quisquam beatae, nobis nam optio dolores, itaque harum facilis aspernatur voluptates ex totam maiores!
-            </p>
-        </section>
+        <div class="Respuesta">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa facere praesentium nesciunt consequatur, eaque, vel labore doloremque dolorem tenetur suscipit non, ea deleniti ut veritatis minus deserunt culpa cum amet nobis ex. Quasi in voluptatem molestiae, soluta quibusdam ipsa! Voluptatibus omnis suscipit porro perferendis in laboriosam veniam mollitia at? Consectetur ab dignissimos quos temporibus assumenda dicta tenetur beatae atque quis, veniam sunt reprehenderit voluptatum blanditiis debitis sed enim? Ducimus laudantium esse atque possimus! Labore fuga molestias fugit odit sed illum aperiam accusamus minima corporis repudiandae porro quisquam beatae, nobis nam optio dolores, itaque harum facilis aspernatur voluptates ex totam maiores!
+        </div>
     </main>
 
     <footer>
-
         <div>
-            <p>Desarrollada por Andrés Lattanzio. &copy; Derechos Reservados. 2024</p>
+            Desarrollada por Andrés Lattanzio. &copy; Derechos Reservados. 2024
         </div>
-
         <div>
             <a href="mailto:nalattanzio@gmail.com">
                 <img src="./imagenes/gmail-icon-free-png.webp" alt="Gmail"></a>
                 
-                <a href="https://www.facebook.com/nalattanzio"><img src="./imagenes/Facebook_Logo.png" alt="TikTok"></a>
-
-                <a href="https://www.instagram.com/lattanzioandres/"><img src="./imagenes/instagram-logo.jpg" alt="Gmail"></a>
-
-            <a href="http://tiktok.com/@nalattanzio72"><img src="./imagenes/logo-tiktok.jpg" alt="TikTok"></a>
+            <a target="_blank" href="https://www.facebook.com/nalattanzio"><img src="./imagenes/Facebook_Logo.png" alt="TikTok"></a>
+  
+            <a target="_blank" href="https://www.instagram.com/lattanzioandres/"><img src="./imagenes/instagram-logo.jpg" alt="Gmail"></a>
+  
+            <a target="_blank" href="http://tiktok.com/@nalattanzio72"><img src="./imagenes/logo-tiktok.jpg" alt="TikTok"></a>
         </div>
-
-    </footer>
+      </footer>
+  
 </body>
 
 </html>
