Heladeria, cards del index y text-decoration

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./contacto.html">Suscribirse</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./heladeria.html">Heladeria</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -67,59 +70,59 @@
         </div>
         <div class="tarjeta">
             <img src="./imagenes/Alien.png" alt="">
-            <p>
-                <b><u>Titulo Original:</u></b><br>
-                <b><u>Año de estreno:</u></b><br>
-                <b><u>País:</u></b><br>
-                <b><u>Director:</u></b><br>
-                <b><u>Protagonistas:</u></b><br>
-                <b><u>Productores:</u></b><br>
-                <b><u>Calificación:</u></b><br>
-                <b><u>Género:</u></b><br>
-                <b><u>Sinopsis:</u></b><br>
-            </p>
+            <div>
+                Titulo Original:<br>
+                Año de estreno:<br>
+                País:<br>
+                Director:<br>
+                Protagonistas:<br>
+                Productores:<br>
+                Calificación:<br>
+                Género:<br>
+                Sinopsis:<br>
+            </div>
         </div>
         <div class="tarjeta">
             <img src="./imagenes/CuentoChino.png" alt="">
-            <p>
-                <b><u>Titulo Original:</u></b><br>
-                <b><u>Año de estreno:</u></b><br>
-                <b><u>País:</u></b><br>
-                <b><u>Director:</u></b><br>
-                <b><u>Protagonistas:</u></b><br>
-                <b><u>Productores:</u></b><br>
-                <b><u>Calificación:</u></b><br>
-                <b><u>Género:</u></b><br>
-                <b><u>Sinopsis:</u></b><br>
-            </p>
+            <div>
+                Titulo Original:<br>
+                Año de estreno:<br>
+                País:<br>
+                Director:<br>
+                Protagonistas:<br>
+                Productores:<br>
+                Calificación:<br>
+                Género:<br>
+                Sinopsis:<br>
+            </div>
         </div>
         <div class="tarjeta">
             <img src="./imagenes/VolverAlFuturo.png" alt="">
-            <p>
-                <b><u>Titulo Original:</u></b><br>
-                <b><u>Año de estreno:</u></b><br>
-                <b><u>País:</u></b><br>
-                <b><u>Director:</u></b><br>
-                <b><u>Protagonistas:</u></b><br>
-                <b><u>Productores:</u></b><br>
-                <b><u>Calificación:</u></b><br>
-                <b><u>Género:</u></b><br>
-                <b><u>Sinopsis:</u></b><br>
-            </p>
+            <div>
+                Titulo Original:<br>
+                Año de estreno:<br>
+                País:<br>
+                Director:<br>
+                Protagonistas:<br>
+                Productores:<br>
+                Calificación:<br>
+                Género:<br>
+                Sinopsis:<br>
+            </div>
         </div>
         <div class="tarjeta">
             <img src="./imagenes/SupremaciaBourne.png" alt="">
-            <p>
-                <b><u>Titulo Original:</u></b><br>
-                <b><u>Año de estreno:</u></b><br>
-                <b><u>País:</u></b><br>
-                <b><u>Director:</u></b><br>
-                <b><u>Protagonistas:</u></b><br>
-                <b><u>Productores:</u></b><br>
-                <b><u>Calificación:</u></b><br>
-                <b><u>Género:</u></b><br>
-                <b><u>Sinopsis:</u></b><br>
-            </p>
+            <div>
+                Titulo Original:<br>
+                Año de estreno:<br>
+                País:<br>
+                Director:<br>
+                Protagonistas:<br>
+                Productores:<br>
+                Calificación:<br>
+                Género:<br>
+                Sinopsis:<br>
+            </div>
         </div>
       </div>
     </main>
