--- a/heladeria.html
+++ b/heladeria.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>heladeria</title>
+    <title>Heladeria</title>
     <link rel="stylesheet" href="./estilos/heladeria.css">
     <script src="./heladeria.js"></script>
   </head>
@@ -18,7 +18,7 @@
         <div class="tamanios">
           <p>SELECCIONE EL TAMAÑO</p>
 
-          <form id="tamanios">
+          <form id="medidas">
             <input type="radio" id="bocha1" name="tamanio" value="1 bocha">
             <label for="bocha1">1 bocha ... $10.-</label><br>
             
@@ -73,7 +73,7 @@
         <div class="toppings">
           <p>SELECCIONE EL TOPPING</p>
 
-          <form id="toppings">
+          <form id="aderezos">
             <input type="radio" id="oreo" name="topping" value="Oreo">
             <label for="oreo">Oreo ... $5.-</label><br>
             
