--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
     <header id="indice">
         <nav class="navbar navbar-expand-lg bg-danger">
           <div class="container-fluid">
-            <a class="navbar-brand titulo" href="#">WikiFilms</a>
+            <a class="navbar-brand titulo" href="./index.html">WikiFilms</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
